# ai-video-editor

./: .gitignore  .mcp.json  LICENSE  README.md
api/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
api/docs/: README.md  api.md  architecture.md  candidate-sources.md  codebase-tour.md  cost-and-tracing.md  editing-tools.md  mcp.md  problem.md  roadmap.md  setup.md
api/src/ai_video_editor/: cli.py  compile.py  compile_cleanup.py  compile_journal.py  config.py  database.py  editing.py  edits.py  feedback.py  highlights.py  main.py  models.py  rag.py  ranker.py  sfx.py  shorts.py  splitter.py  thumbnail.py  tracing.py
api/src/ai_video_editor/candidates/: audio.py  cv_kda.py  fuzzy_correct.py  probe.py  sentiment.py  service.py  transcribe.py  transcript.py
api/src/ai_video_editor/intros/: __init__.py  config.py  render.py  storage.py
api/src/ai_video_editor/league/: __init__.py  calibrate.py  ocr.py  orchestrator.py
api/src/ai_video_editor/league/candidates/: __init__.py  champion.py  riot.py
api/src/ai_video_editor/profiles/: __init__.py  default.toml  league.toml  valorant.toml
api/src/ai_video_editor/routers/: analyze.py  assets.py  clips.py  edits.py  feedback.py  intros.py  jobs.py  league.py  projects.py  sfx.py  shorts.py  vlm.py
api/src/ai_video_editor/vlm/: __init__.py  client.py  frames.py  loops.py  prompts.py  validator.py
api/src/ai_video_editor/vlm/backends/: anthropic_backend.py  base.py  ollama_backend.py
api/src/ai_video_editor/vlm/game_hints/: _default.md  league.md  valorant.md
api/tests/: conftest.py  test_audio.py  test_candidate_label_promotion.py  test_compile.py  test_compile_cleanup.py  test_compile_journal.py  test_cv_kda.py  test_edits.py  test_feedback.py  test_g1b.py  test_highlights.py  test_integration.py  test_intros.py  test_profiles.py  test_rag.py  test_sfx.py  test_shorts_bucketing.py  test_shorts_refine.py  test_splitter.py  test_thumbnail.py  test_tiktok_captions.py  test_transcript.py  test_vlm_backends.py  test_vlm_frames.py  test_vlm_loops.py  test_vlm_prompts.py
api/tests/league/: test_calibrate.py  test_champion.py  test_riot.py
mcp/: README.md  pyproject.toml
mcp/src/ai_video_editor_mcp/: __init__.py  server.py
mcp/tests/: test_server.py
web/: .gitignore  (+6 more)
(+55 files in other folders)
