[project]
name = "ai-video-editor-mcp"
version = "0.1.0"
description = "MCP server for the ai-video-editor backend. Thin stdio adapter over the HTTP API — no backend logic, no DB."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.1",
    "httpx>=0.28.1",
]

[project.scripts]
ai-video-editor-mcp = "ai_video_editor_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
